manifests/showks-canvas-jyoshise3/manifest.yaml
---
# Source: showks-canvas/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: showks-canvas-jyoshise3
  namespace: showks
  labels:
    app: showks-canvas-jyoshise3
    class: showks-canvas
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: app-port
  selector:
    app: showks-canvas-jyoshise3

---
# Source: showks-canvas/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: showks-canvas-jyoshise3
  namespace: showks
  labels:
    app: showks-canvas-jyoshise3
    class: showks-canvas
spec:
  replicas: 1
  selector:
    matchLabels:
      app: showks-canvas-jyoshise3
  template:
    metadata:
      labels:
        app: showks-canvas-jyoshise3
        class: showks-canvas
    spec:
      containers:
        - name: showks-canvas-jyoshise3
          image: cloudnativedaysjp/showks-canvas-jyoshise3:prod-6bff91d65f8c2d12d7b24a6a9d30e936e90bf599
          ports:
            - name: app-port
              containerPort: 8080
              protocol: TCP

---
# Source: showks-canvas/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: showks-canvas-jyoshise3
  namespace: showks
  labels:
    class: showks-canvas
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.org/ssl-services: "showks-canvas-jyoshise3"
    ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
      - showks-canvas-jyoshise3.showks.cloudnativedays.jp
      secretName: tls-certificate
  rules:
  - host: showks-canvas-jyoshise3.showks.cloudnativedays.jp
    http:
      paths:
      - path: /
        backend:
          serviceName: showks-canvas-jyoshise3
          servicePort: 8080
